Revision history for {{$dist->name}}

{{$NEXT}}

0.06      2017-11-11 08:15:04 -0500
  - Fix testing fail when Sort::Versions is not installed

0.05      2017-08-10 16:42:19 -0400
  - Add IRC to metadata
  - Fix for windows

0.04      2017-08-08 06:31:52 -0400
  - Support older gits that do not have the -C option

0.03_01   2017-07-31 15:10:16 -0400
  - Diagnostic release

0.02      2017-07-20 12:28:28 -0400
  - Improved testing

0.01      2017-07-17 02:56:54 -0400
  - initial version