@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - MSWin32 (Strawberry Perl) fixes
 
 0.06      2017-11-11 08:15:04 -0500
   - Fix testing fail when Sort::Versions is not installed
